--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://karri-durgaprasad.github.io/Myreact/",
+  "homepage": " https://karri-durgaprasad.github.io/./",
   "name": "myreact",
   "version": "0.1.0",
   "private": true,
@@ -12,8 +12,9 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.97.1"
   },
   "scripts": {
     "predeploy": "npm run build",
